Amélioration de la configuration